<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search" translatable="false">Поиск</string>
    <string name="button_media" translatable="false">Медиатека</string>
    <string name="button_settings" translatable="false">Настройки</string>
    <string name="settings_arrow" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="sharePlaylist" translatable="false">Поделиться плейлистом</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="acception" translatable="false">Пользовательское соглашение</string>
    <string name="app_link" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email" translatable="false">ekaterinalife92@yandex.ru</string>
    <string name="subjectWriteSupport" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="textWriteSupport" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="acception_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_cover" translatable="false">Обложка трека</string>
    <string name="no_song" translatable="false">Ничего не нашлось</string>
    <string name="no_internet_first_line" translatable="false">Проблемы со связью</string>
    <string name="no_internet_second_line" translatable="false"> </string>
    <string name="no_internet_third_line" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="check_internet" translatable="false"></string>
    <string name="update" translatable="false">Обновить</string>
    <string name="last_search" translatable="false">Вы искали</string>
    <string name="clean_history" translatable="false">Очистить историю</string>
    <string name="iTunesLink" translatable="false">https://itunes.apple.com/</string>
    <string name="button_back" translatable="false">Назад</string>
    <string name="network_error" translatable="false">Произошла сетевая ошибка</string>
    <string name="error_occured" translatable="false">Произошла ошибка:</string>
    <string name="goes_wrong" translatable="false">Что-то пошло не так</string>
    <string name="no_internet" translatable="false">Проверьте подключение к интернету</string>
    <string name="fav_tracks" translatable="false">Избранные треки</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <string name="empty_fav" translatable="false">Ваша медиатека пуста</string>
    <string name="empty_playlist" translatable="false">Ваш плейлист пуст</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="no_playlist_fist_line" translatable="false">Вы не создали</string>
    <string name="no_playlist_second_line" translatable="false">ни одного плейлиста</string>
    <string name="back_to_playlist" translatable="false">Новый плейлист</string>
    <string name="edit" translatable="false">Редактировать</string>
    <string name="playlist_name" translatable="false">Название*</string>
    <string name="playlist_description" translatable="false">Описание</string>
    <string name="create" translatable="false">Создать</string>
    <string name="save_playlist" translatable="false">Сохранить</string>
    <string name="saveConfirmTitle" translatable="false">Завершить создание плейлиста?</string>
    <string name="deleteConfirmTitle" translatable="false">Хотите удалить трек?</string>
    <string name="saveConfirmMessage" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="finish" translatable="false">Завершить</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="myAlbum" translatable="false">myalbum</string>
    <string name="trackNotAdded" translatable="false">Трек уже добавлен в плейлист %1$s</string>
    <string name="trackAdded" translatable="false">Добавлено в плейлист %1$s</string>
    <string name="addToPlaylist" translatable="false">Добавить в плейлист</string>
    <string name="playlistCreated" translatable="false">Плейлист %1$s создан</string>
    <string name="error_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="share_playlist" translatable="false">Поделиться</string>
    <string name="edit_playlist" translatable="false">Редактировать плейлист</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="no_tracks_to_share" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="deletePlaylistConfirm" translatable="false">Хотите удалить плейлист "%1$s"?</string>
</resources>