<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context="com.example.myappplaylistmaker.presentation.ui.settings.SettingsFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56"
        android:orientation="horizontal"
        android:padding="@dimen/size_4" >

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_12"
            style="@style/Titles"
            android:text="@string/settings_arrow" />

        </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_24"
        android:layout_gravity="center_vertical"
        style="@style/ActivitySettingsButton"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck"
        android:text="@string/dark_mode"
        app:thumbTint="?attr/thumbColor"
        app:trackTint="?attr/trackColor" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        style="@style/ActivitySettingsButton"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck"
        android:text="@string/share"
        app:icon="@drawable/icon_share" />

    <Button
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        style="@style/ActivitySettingsButton"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck"
        android:text="@string/support"
        app:icon="@drawable/icon_support"/>

    <Button
        android:id="@+id/acception"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        style="@style/ActivitySettingsButton"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck"
        android:text="@string/acception"
        app:icon="@drawable/icon_acception" />

    </LinearLayout>