<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context="com.example.myappplaylistmaker.presentation.ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56"
        android:orientation="horizontal"
        android:padding="@dimen/size_4" >

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_12"
            android:text="@string/button_search"
            style="@style/Titles"
            android:textColor="?attr/colorAccent" />

    </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_36"
    android:layout_marginTop="@dimen/size_8"
    android:layout_marginStart="@dimen/size_16"
    android:layout_marginEnd="@dimen/size_16">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_gravity="center_vertical"
        android:paddingStart="@dimen/size_12"
        android:paddingEnd="@dimen/size_16"
        android:paddingTop="@dimen/size_8"
        android:paddingBottom="@dimen/size_8"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/setting_title"
        android:textColorHint="?attr/hintTextColor"
        android:textSize="@dimen/settings_text_size"
        android:hint="@string/button_search"
        android:maxLines="2"
        android:inputType="text"
        android:cursorVisible="true"
        android:focusable="true"
        android:textCursorDrawable="@drawable/cursor_edit"
        android:drawableStart="@drawable/icon_glass"
        android:drawableTint="?attr/hintTextColor"
        android:drawablePadding="@dimen/size_8" />

    <Button
        android:id="@+id/requestFocusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearButton"
        android:layout_width="@dimen/size_40"
        android:layout_height="@dimen/size_36"
        android:layout_gravity="center_vertical|end"
        app:icon="@drawable/icon_clear"
        app:iconTint="?attr/hintTextColor"
        app:iconGravity="top"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text"/>

</FrameLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:visibility="visible"
        android:layout_marginTop="@dimen/size_140"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/switch_thumb_dark"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/yourSearch"
        android:visibility="visible"
        android:layout_height="@dimen/size_52"
        android:layout_marginTop="@dimen/size_24"
        android:gravity="center"
        style="@style/Placeholder_last_search"
        android:text="@string/last_search" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:paddingHorizontal="@dimen/size_12"
            android:paddingVertical="@dimen/size_8"
            android:layout_marginTop="@dimen/size_24" />

        <Button
            android:id="@+id/clean_history_button"
            android:visibility="visible"
            style="@style/ButtonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_56"
            android:text="@string/clean_history"
            android:textAllCaps="false" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <LinearLayout
        android:id="@+id/no_song_placeholder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_102"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_song" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16"
            style="@style/Placeholder"
            android:text="@string/no_song" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet_placeholder"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_102"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_internet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_24"
            android:layout_marginTop="@dimen/size_16" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Placeholder"
                android:text="@string/no_internet_first_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Placeholder"
                android:text="@string/no_internet_second_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Placeholder"
                android:text="@string/no_internet_third_line" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                style="@style/ButtonUpdate"
                android:text="@string/update"
                android:textAllCaps="false" />

         </LinearLayout>

    </LinearLayout>

</LinearLayout>

