<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:letterSpacing="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:text="@string/button_search"
            android:textAllCaps="false"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:letterSpacing="0"
            app:cornerRadius="16dp"
            app:icon="@drawable/icon_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_media"
            android:textAllCaps="false"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:letterSpacing="0"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/icon_media"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:letterSpacing="0"
            app:cornerRadius="16dp"
            android:text="@string/button_settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/icon_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />


    </LinearLayout>

</LinearLayout>