<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56"
        android:orientation="horizontal"
        android:padding="@dimen/size_4" >

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:padding="@dimen/size_12"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/icon_arrow" />
    
        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_12"
            android:text="@string/settings_arrow"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textColor="@color/setting_title" />

        </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMaterial"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_61"
        android:layout_marginTop="@dimen/size_24"
        android:paddingStart="@dimen/size_16"
        android:paddingEnd="@dimen/size_12"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:fontFamily="@font/ys_display_regular"
        android:foreground="?attr/selectableItemBackground"
        android:inputType="textCapWords"
        android:letterSpacing="0"
        android:text="@string/dark_mode"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size"
        app:iconGravity="end"
        app:thumbTint="@color/switch_thumb_light"
        app:trackTint="@color/switch_track_light"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_61"
        android:background="@android:color/transparent"
        android:fontFamily="@font/ys_display_regular"
        android:foreground="?attr/selectableItemBackground"
        android:inputType="textCapWords"
        android:letterSpacing="0"
        android:paddingStart="@dimen/size_16"
        android:paddingEnd="@dimen/size_12"
        android:text="@string/share"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/icon_share"
        app:iconGravity="end"
        app:iconTint="@color/icon_light"
        tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck" />

    <Button
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_61"
            android:text="@string/support"
            android:textSize="@dimen/settings_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:letterSpacing="0"
            android:paddingStart="@dimen/size_16"
            android:paddingEnd="@dimen/size_12"
            app:icon="@drawable/icon_support"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:inputType="textCapWords"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:iconGravity="end"
            app:iconTint="@color/icon_light"
            tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck" />

    <Button
            android:id="@+id/acception"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_61"
            android:text="@string/acception"
            android:textSize="@dimen/settings_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:letterSpacing="0"
            android:layout_marginBottom="@dimen/size_21"
            android:paddingStart="@dimen/size_16"
            android:paddingEnd="@dimen/size_12"
            android:layout_gravity="end"
            app:icon="@drawable/icon_acception"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:inputType="textCapWords"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:iconGravity="end"
            app:iconTint="@color/icon_light"
            tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck" />

    </LinearLayout>